--- a/ms-usuario/src/main/resources/application.properties
+++ b/ms-usuario/src/main/resources/application.properties
@@ -4,10 +4,10 @@ server.port=8001
 #################
 ##### JPA #######
 #################
-spring.datasource.url=jdbc:mysql://{DB_IP_PORT_NAME}
-spring.datasource.username={DB_USERNAME}
-spring.datasource.password={BD_PASSWORD}
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database.platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.generate-dll=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.generate-ddl=true
 logging.level.org.hibernate.SQL=debug
